[package]
name = "lyo"
version = "0.1.0"
authors = ["lyon <leenus1024@gmail.com>"]
edition = "2024"
description = "automatic task distribution"
license = "MIT"
repository = "https://github.com/lyonux/lyo"
homepage = "https://github.com/lyonux/lyo/blob/main/README.md"
keywords = ["task", "distribution", "async"]
categories = ["asynchronous"]

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
tracing = "0.1.44"

[dev-dependencies]
tokio-test = "0.4"
